# sage

./: .gitignore  Cargo.toml  README.md  ep.csv  ep.txt  prof1_bert_calltrace_energy.csv  prof1_bert_calltrace_latency.csv  prof1_bert_memtrace.csv  prof1_resnet_calltrace_energy.csv  prof1_resnet_calltrace_latency.csv  prof1_resnet_memtrace.csv  prof2_bert_calltrace_energy.csv  prof2_bert_calltrace_latency.csv  prof2_bert_memtrace.csv  prof2_resnet_calltrace_energy.csv  prof2_resnet_calltrace_latency.csv  prof2_resnet_memtrace.csv  torch_bench.py  torch_bench.txt
sage_tensor/: Cargo.toml
sage_tensor/src/: backend.rs  format.rs  iter.rs  main.rs  ops.rs  shape.rs  tensor.rs
sage_tensor/src/backend/: native.rs  vulkan.rs
sage_tensor/src/backend/vulkan/: shader.rs  shader_def_ex.rs  shader_ex.rs
sage_tensor/src/backend/vulkan/shaders/: col2im.comp  compile_helper.py  tensor_contraction.comp  tensor_reduction_index.comp  unary_ops.comp
sage_tensor/src/ops/: conv.rs  linalg.rs  math.rs  stats.rs
src/: autodiff.rs  data.rs  layers.rs  main.rs  mnist.rs  models.rs  net.rs  op.rs  ops.rs  optimizers.rs  paper_experiments.rs  profile.rs  session.rs  shape.rs  sim.rs  tensor.rs  var.rs
src/autodiff/: mod.rs  session.rs  sim.rs  var.rs
src/data/: mod.rs
src/example_models/: bert.rs  dcgan.rs  densenet.rs  mod.rs  resnet.rs  stacked_lstm.rs
src/layers/: activations.rs  attention.rs  base.rs  convolutional.rs  embedding.rs  mod.rs  normalization.rs  pooling.rs  recurrent.rs
src/models/: attention.rs  bert.rs  common.rs  densenet.rs  gpt2.rs
src/optim/: mod.rs
(+30 files in other folders)
