[package]
name = "delta"
version = "0.1.0"
authors = ["hyunj"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
impl_ops = "0.1.1"
itertools = "0.10.0"
rand = "0.8.3"
rand_distr = "0.4.0"
num-traits = "0.2.14"
ndarray = "0.14.0"
matrixmultiply = "0.3.0"